library_includedir=$(includedir)/ambulant/gui/dg
library_include_HEADERS= \
	bmp_decoder.h \
	dg_area.h \
	dg_audio.h \
	dg_audio_player.h \
	dg_audio_renderer.h \
	dg_bgrenderer.h \
	dg_brush.h \
	dg_dib_surface.h \
	dg_image_renderer.h \
	dg_img.h \
	dg_mp3_decoder.h \
	dg_playable.h \
	dg_player.h \
	dg_rgn.h \
	dg_surface.h \
	dg_text.h \
	dg_transition.h \
	dg_viewport.h \
	dg_window.h \
	dg_wmuser.h \
	gif_decoder.h \
	img_decoder.h \
	jpg_decoder.h \
	png_decoder.h
