library_includedir=$(includedir)/ambulant/gui/dx
library_include_HEADERS= \
	bmp_decoder.h \
	dx_area.h \
	dx_audio.h \
	dx_audio_player.h \
	dx_basicvideo_player.h \
	dx_basicvideo.h \
	dx_bgrenderer.h \
	dx_brush.h \
	dx_dsvideo.h \
	dx_html_renderer.h \
	dx_image_renderer.h \
	dx_img.h \
	dx_playable.h \
	dx_player.h \
	dx_rgn.h \
	dx_surface.h \
	dx_smiltext.h \
	dx_text.h \
	dx_text_renderer.h \
	dx_transition.h \
	dx_video.h \
	dx_video_player.h \
	dx_viewport.h \
	dx_window.h \
	dx_wmuser.h \
	gif_decoder.h \
	html_bridge.h \
	img_decoder.h \
	jpg_decoder.h \
	png_decoder.h
