library_includedir=$(includedir)/ambulant/gui/qt
library_include_HEADERS=		\
	qt_includes.h			\
	qt_renderer.h			\
	qt_fill.h			\
	qt_html_renderer.h		\
	qt_image_renderer.h		\
	qt_smiltext.h			\
	qt_text_renderer.h		\
	qt_transition.h			\
	qt_util.h			\
	qt_video_renderer.h		\
	qt_factory.h			\
	qt_factory_impl.h
